[package]
name = "diskorbit"
version = "1.0.0"
edition = "2021"

[dependencies]
eframe = "0.27"
egui   = "0.27"
rayon  = "1.10"
image  = { version = "0.25", default-features = false, features = ["ico"] }
rfd    = "0.14"

[build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = 3
lto       = true
